// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTree should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 path {
  fill: #74777F;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #22242A;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c4 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 path {
  fill: #74777F;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #22242A;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c4 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render component with expanded lists 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 path {
  fill: #74777F;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #22242A;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c4 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 path {
  fill: #74777F;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 24px;
  height: 24px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #22242A;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 8px 16px 8px 0px;
}

.c4 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectTree should render small components 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 path {
  fill: #74777F;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 20px;
  height: 20px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #22242A;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 6px 16px 6px 0px;
}

.c4 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<body>
    <div>
      <ul
        class="c0"
      >
        <li
          class="c1"
        >
          <div
            class="c2"
            data-key="1"
          >
            <div
              class="c3"
            />
          </div>
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 1
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 2
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 3
          </div>
        </li>
        <li
          class="c1"
        >
          <div
            class="c4"
          >
            Текст заголовка, первый уровень компонента, размер M 40 4
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": .c3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 path {
  fill: #74777F;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 16px;
  box-sizing: border-box;
  cursor: pointer;
  position: relative;
  width: 20px;
  height: 20px;
}

.c2:hover::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  width: calc(100% + 12px);
  height: calc(100% + 12px);
  background-color: #0000000D;
}

.c1 {
  color: #22242A;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 6px 16px 6px 0px;
}

.c4 {
  padding-top: 2px;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

<div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <div
          class="c2"
          data-key="1"
        >
          <div
            class="c3"
          />
        </div>
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 1
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 2
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 3
        </div>
      </li>
      <li
        class="c1"
      >
        <div
          class="c4"
        >
          Текст заголовка, первый уровень компонента, размер M 40 4
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
